--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,17 +17,24 @@ $White: hsl(0, 0, 98);
 body {
   font-family: 'Red Hat Display', sans-serif;
   background: $White;
+  // overflow: hidden;
 }
+
+// header
 
 header {
   display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
-  margin: 48px auto 54px auto;
+  margin: 80px auto 61px auto;
 }
+
+// groupchat
+
 .groupchat {
   display: flex;
+  margin-left: -35px;
   width: 1504px;
   height: 358px;
 
@@ -67,11 +74,12 @@ header {
     }
 
     p {
+      margin-top: 51px;
       color: $Gray;
       text-align: center;
       font-size: 18px;
       line-height: 26px;
-      margin-bottom: 30px;
+      margin-bottom: 38px;
     }
   }
 
@@ -124,6 +132,8 @@ header {
   }
 }
 
+// number 1
+
 .number1-section {
   display: flex;
   flex-direction: column;
@@ -132,7 +142,7 @@ header {
 
   .line {
     margin: 0 auto;
-    margin-top: 64px;
+    margin-top: 115px;
     width: 1px;
     height: 84px;
     background-color: $Gray;
@@ -153,6 +163,8 @@ header {
   }
 }
 
+// image contaner
+
 .mid-images {
   display: flex;
   flex: 1;
@@ -161,6 +173,7 @@ header {
   margin-left: 163px;
   height: 242px;
   width: 1110px;
+  margin-bottom: 80px;
 
   img {
     border-radius: 15px;
@@ -169,9 +182,12 @@ header {
   }
 }
 
+// text container
+
 .container {
   margin: 0 auto;
   margin-top: 64px;
+  margin-bottom: 74px;
   text-align: center;
   width: 540px;
   height: 240;
@@ -183,13 +199,11 @@ header {
     font-size: 16px;
     text-transform: uppercase;
     color: $Green;
-    // margin-bottom: -50px;
   }
 
   h2 {
     margin-top: 37px;
     color: $Black;
-    // margin-top: 50px;
     font-weight: 900;
     line-height: 44px;
     font-size: 40px;
@@ -203,4 +217,87 @@ header {
     font-weight: medium;
     line-height: 26px;
   }
+}
+
+.number2-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -28px;
+
+  .line {
+    margin: 0 auto;
+    // margin-top: 115px;
+    width: 1px;
+    height: 84px;
+    background-color: $Gray;
+    opacity: 25%;
+  }
+
+  .button-number {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 1px solid $Gray;
+    font-size: 16px;
+    font-weight: 900;
+    line-height: 26px;
+    color: $Gray;
+    background-color: $White;
+    // margin-bottom: 62px;
+  }
+}
+
+// footer
+
+footer {
+  background: linear-gradient(rgba(77, 150, 168, 0.9), rgba(77, 150, 168, 0.9)),
+    url('image-footer.jpg') no-repeat center;
+  background-size: cover;
+
+  height: 308px;
+}
+
+.footer-container {
+  display: flex;
+  padding: 110px 0 100px 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-experience {
+  font-size: 40px;
+  font-weight: 900;
+  color: #fafafa;
+  line-height: 44px;
+  margin-right: 80px;
+  width: 20%;
+}
+
+.footer-stay-connected {
+  font-size: 18px;
+  width: 20%;
+  color: #fafafa;
+  font-weight: 500;
+  line-height: 26px;
+  margin-right: 100px;
+}
+
+#footer-button-download {
+  background-color: #855fb1;
+  width: 193px;
+  height: 58px;
+  border-radius: 29px;
+  border: none;
+  cursor: pointer;
+  color: #fafafa;
+  font-weight: 900;
+}
+#footer-button-download > span {
+  color: #d9b8ff;
+}
+
+#footer-button-download:hover {
+  background-color: #b18bdd;
 }
