Desktop Laning page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,6 @@ $White: hsl(0, 0, 98);
 body {
   font-family: 'Red Hat Display', sans-serif;
   background: $White;
-  // overflow: hidden;
 }
 
 // header
@@ -39,7 +38,6 @@ header {
   height: 358px;
 
   .groupchat_img {
-    // flex: 1;
     display: grid;
     grid-template-columns: repeat(3, auto);
 
@@ -84,7 +82,6 @@ header {
   }
 
   .groupchat_buttons {
-    margin-left: -65px;
     display: flex;
     justify-content: center;
 
@@ -96,7 +93,7 @@ header {
       font-weight: 800;
       text-align: center;
       background: $Green;
-      // padding: 1rem 3rem;
+
       border-radius: 30px;
       border: none;
       outline: none;
@@ -228,7 +225,6 @@ header {
 
   .line {
     margin: 0 auto;
-    // margin-top: 115px;
     width: 1px;
     height: 84px;
     background-color: $Gray;
@@ -245,7 +241,6 @@ header {
     line-height: 26px;
     color: $Gray;
     background-color: $White;
-    // margin-bottom: 62px;
   }
 }
 
@@ -255,49 +250,45 @@ footer {
   background: linear-gradient(rgba(77, 150, 168, 0.9), rgba(77, 150, 168, 0.9)),
     url('image-footer.jpg') no-repeat center;
   background-size: cover;
-
   height: 308px;
-}
 
-.footer-container {
-  display: flex;
-  padding: 110px 0 100px 0;
-  justify-content: center;
-  align-items: center;
-}
+  .footer-container {
+    display: flex;
+    padding: 110px 0 100px 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-experience {
+    font-size: 40px;
+    font-weight: 900;
+    color: #fafafa;
+    line-height: 44px;
+    margin-right: 80px;
+    width: 20%;
+  }
+  .footer-stay-connected {
+    font-size: 18px;
+    width: 20%;
+    color: #fafafa;
+    font-weight: 500;
+    line-height: 26px;
+    margin-right: 100px;
+  }
+  .footer-button-download {
+    background-color: #855fb1;
+    width: 193px;
+    height: 58px;
+    border-radius: 29px;
+    border: none;
+    cursor: pointer;
+    color: #fafafa;
+    font-weight: 900;
 
-.footer-experience {
-  font-size: 40px;
-  font-weight: 900;
-  color: #fafafa;
-  line-height: 44px;
-  margin-right: 80px;
-  width: 20%;
-}
-
-.footer-stay-connected {
-  font-size: 18px;
-  width: 20%;
-  color: #fafafa;
-  font-weight: 500;
-  line-height: 26px;
-  margin-right: 100px;
-}
-
-#footer-button-download {
-  background-color: #855fb1;
-  width: 193px;
-  height: 58px;
-  border-radius: 29px;
-  border: none;
-  cursor: pointer;
-  color: #fafafa;
-  font-weight: 900;
-}
-#footer-button-download > span {
-  color: #d9b8ff;
-}
-
-#footer-button-download:hover {
-  background-color: #b18bdd;
+    &:hover {
+      background-color: #b18bdd;
+    }
+  }
+  span {
+    color: #d9b8ff;
+  }
 }
